@@ -2,9 +2,9 @@ package stream.arepresas.cryptotracker.utils;
 
 import lombok.NonNull;
 import lombok.experimental.UtilityClass;
-import stream.arepresas.cryptotracker.external.coinMarket.dto.CoinMarketCryptoInfo;
-import stream.arepresas.cryptotracker.external.coinMarket.dto.CoinMarketCryptoPrice;
-import stream.arepresas.cryptotracker.external.coinMarket.dto.CoinMarketCryptoPriceQuote;
+import stream.arepresas.cryptotracker.external.coinmarket.dto.CoinMarketCryptoInfo;
+import stream.arepresas.cryptotracker.external.coinmarket.dto.CoinMarketCryptoPrice;
+import stream.arepresas.cryptotracker.external.coinmarket.dto.CoinMarketCryptoPriceQuote;
 import stream.arepresas.cryptotracker.features.cryptos.CryptoCoin;
 import stream.arepresas.cryptotracker.features.cryptos.CryptoCoinPrice;
 import stream.arepresas.cryptotracker.features.cryptos.CryptoCoinPriceQuote;
@@ -15,7 +15,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static stream.arepresas.cryptotracker.utils.DataUtils.stringListToString;
 
@@ -43,13 +42,13 @@ public class CoinMarketUtils {
       @NotNull CoinMarketCryptoPrice coinMarketCryptoPrice, @NotNull CryptoCoin cryptoCoin) {
     CryptoCoinPrice cryptoCoinPrice =
         CryptoCoinPrice.builder()
-            .cmc_rank(coinMarketCryptoPrice.getCmc_rank())
-            .num_market_pairs(coinMarketCryptoPrice.getNum_market_pairs())
-            .circulating_supply(coinMarketCryptoPrice.getCirculating_supply())
-            .total_supply(coinMarketCryptoPrice.getTotal_supply())
-            .max_supply(coinMarketCryptoPrice.getMax_supply())
-            .last_updated(coinMarketCryptoPrice.getLast_updated())
-            .date_added(coinMarketCryptoPrice.getDate_added())
+            .cmcRank(coinMarketCryptoPrice.getCmcRank())
+            .numMarketPairs(coinMarketCryptoPrice.getNumMarketPairs())
+            .circulatingSupply(coinMarketCryptoPrice.getCirculatingSupply())
+            .totalSupply(coinMarketCryptoPrice.getTotalSupply())
+            .maxSupply(coinMarketCryptoPrice.getMaxSupply())
+            .lastUpdated(coinMarketCryptoPrice.getLastUpdated())
+            .dateAdded(coinMarketCryptoPrice.getDateAdded())
             .platformId(
                 Objects.isNull(coinMarketCryptoPrice.getPlatform())
                     ? null
@@ -75,20 +74,20 @@ public class CoinMarketUtils {
                 CryptoCoinPriceQuote.builder()
                     .currency(Currency.valueOf(s.getKey()))
                     .price(s.getValue().getPrice())
-                    .volume_24h(s.getValue().getVolume_24h())
-                    .volume_change_24h(s.getValue().getVolume_change_24h())
-                    .percent_change_1h(s.getValue().getPercent_change_1h())
-                    .percent_change_24h(s.getValue().getPercent_change_24h())
-                    .percent_change_7d(s.getValue().getPercent_change_7d())
-                    .percent_change_30d(s.getValue().getPercent_change_30d())
-                    .percent_change_60d(s.getValue().getPercent_change_60d())
-                    .percent_change_90d(s.getValue().getPercent_change_90d())
-                    .market_cap(s.getValue().getMarket_cap())
-                    .market_cap_dominance(s.getValue().getMarket_cap_dominance())
-                    .fully_diluted_market_cap(s.getValue().getFully_diluted_market_cap())
-                    .last_updated(s.getValue().getLast_updated())
+                    .volume24h(s.getValue().getVolume24H())
+                    .volumeChange24h(s.getValue().getVolumeChange24H())
+                    .percentChange1h(s.getValue().getPercentChange1H())
+                    .percentChange24h(s.getValue().getPercentChange24H())
+                    .percentChange7d(s.getValue().getPercentChange7D())
+                    .percentChange30d(s.getValue().getPercentChange30D())
+                    .percentChange60d(s.getValue().getPercentChange60D())
+                    .percentChange90d(s.getValue().getPercentChange90D())
+                    .marketCap(s.getValue().getMarketCap())
+                    .marketCapDominance(s.getValue().getMarketCapDominance())
+                    .fullyDilutedMarketCap(s.getValue().getFullyDilutedMarketCap())
+                    .lastUpdated(s.getValue().getLastUpdated())
                     .coinPrice(cryptoCoinPrice)
                     .build())
-        .collect(Collectors.toList());
+        .toList();
   }
 }
